provide source for transcripts and scans dir (#212)
* plumb cli values into AppConfig

* provide source for transcripts and scans dir

* more from merge
