# src/inspect_scout/_view/www/openapi.json
@@ -87,19 +87,17 @@
             "type": "string"
           },
           "scans_dir": {
-            "title": "Scans Dir",
-            "type": "string"
+            "$ref": "#/components/schemas/AppDir"
           },
           "transcripts_dir": {
             "anyOf": [
               {
-                "type": "string"
+                "$ref": "#/components/schemas/AppDir"
               },
               {
                 "type": "null"
               }
-            ],
-            "title": "Transcripts Dir"
+            ]
           }
         },
         "required": [
@@ -108,6 +106,28 @@
           "scans_dir"
         ],
         "title": "AppConfig",
+        "type": "object"
+      },
+      "AppDir": {
+        "properties": {
+          "dir": {
+            "title": "Dir",
+            "type": "string"
+          },
+          "source": {
+            "enum": [
+              "project",
+              "cli"
+            ],
+            "title": "Source",
+            "type": "string"
+          }
+        },
+        "required": [
+          "dir",
+          "source"
+        ],
+        "title": "AppDir",
         "type": "object"
       },
       "ApprovalEvent": {
